# authn

./: Makefile  README.md  __BUILD  __WORKSPACE  go.mod  go.sum
pkg/context/: BUILD.bazel  helpers.go  keys.go
pkg/jwt/: BUILD.bazel  jwt.go  jwt_test.go
pkg/log/: BUILD.bazel
pkg/passwords/: BUILD.bazel  password_test.go  passwords.go
pkg/services/v1/accounts/: BUILD.bazel  svc.go  svc_test.go
pkg/services/v1/accounts/mock-repo/: BUILD.bazel  repo.go
pkg/services/v1/actions/: BUILD.bazel  actions.go
pkg/services/v1/authz/: BUILD.bazel  svc.go
pkg/validators/: BUILD.bazel  email.go  email_test.go
proto/: Makefile
proto-gen/accounts/apiv1/: BUILD.bazel  accounts.go  accounts_api.pb.go  accounts_test.go
proto-gen/authz/apiv1/: BUILD.bazel  authz_api.pb.go
proto/accounts/v1/: BUILD.bazel  accounts_api.proto
proto/authz/v1/: BUILD.bazel  authz_api.proto
