load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "email.go",
        "lang.go",
    ],
    importpath = "github.com/klahssen/authn/pkg/validators",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["email_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_klahssen_tester//:go_default_library"],
)
