load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accounts.go",
        "accounts_api.pb.go",
    ],
    importpath = "github.com/klahssen/authn/proto-gen/accounts/apiv1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/passwords:go_default_library",
        "//pkg/validators:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["accounts_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/passwords:go_default_library",
        "@com_github_klahssen_tester//:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
