load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "apiv1_proto",
    srcs = ["accounts_api.proto"],
    visibility = ["//visibility:public"],
    deps = ["//github.com/gogo/protobuf/gogoproto:gogoproto_proto"],
    #deps = ["//github.com/gogo/protobuf/gogoproto:gogoproto_proto"],
    #deps = ["@com_github_gogo_protobuf//:gogoproto_proto"]
)

go_proto_library(
    name = "apiv1_go_proto",
    #compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/klahssen/authn/proto-gen/accounts/apiv1",
    proto = ":apiv1_proto",
    visibility = ["//visibility:public"],
    deps = ["//github.com/gogo/protobuf/gogoproto:go_default_library"],
    #deps = ["//github.com/gogo/protobuf/gogoproto:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":apiv1_go_proto"],
    importpath = "github.com/klahssen/authn/proto-gen/accounts/apiv1",
    visibility = ["//visibility:public"],
)
