load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["svc.go"],
    importpath = "github.com/klahssen/authn/pkg/services/v1/accounts",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/context:go_default_library",
        "//pkg/jwt:go_default_library",
        "//pkg/services/v1/actions:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["svc_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/jwt:go_default_library",
        "//pkg/services/v1/accounts/mock-repo:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_klahssen_tester//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
