load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["repo.go"],
    importpath = "github.com/klahssen/authn/pkg/services/v1/accounts/mock-repo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/passwords:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
